fixed context line spacing with flag off

--- a/vis/stylesheets/modules/map/_header.scss
+++ b/vis/stylesheets/modules/map/_header.scss
@@ -58,6 +58,11 @@
 #context {
     font-size: 11px;
     color: $black;
+    span {
+        @if not $modern_frontend_enabled {
+            margin-right: 1%;
+        }
+    }
     .context_moreinfo {
         border-bottom: 1px solid $medium-blue;
         cursor: help;
